# azure-mcp-with-langgraph

./: README.md  app-api.py  app-console.py  app.py  client.py  pyproject.toml  requirements.txt  weatherserver.py
src/clients/: client.py
src/memories/: memory.py
src/prompts/: prompt.py
src/servers/: mathserver.py
src/services/: backup_code.py
src/services/cosmos_service/: chat_repository.py
src/states/: chat_state.py  chat_state_v2.py
